--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "@types/react-lottie": "^1.2.10",
+    "@types/react-svg": "^5.0.0",
+    "lottie-web": "^5.12.2",
+    "openai": "^4.38.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.4",
     "react-redux": "^9.1.0",
-    "redux-saga": "^1.3.0"
+    "redux-saga": "^1.3.0",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
