--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.4",
+    "react-markdown": "^9.0.1",
     "react-redux": "^9.1.0",
     "redux-saga": "^1.3.0",
     "vite-plugin-svgr": "^4.2.0"
