--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "@tanstack/react-query": "^5.44.0",
     "@types/react-lottie": "^1.2.10",
     "@types/react-svg": "^5.0.0",
     "lottie-web": "^5.12.2",
