--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather_app",
+  "name": "weatherwise_ai",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -23,8 +23,7 @@
     "react-lottie": "^1.2.4",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.0",
-    "redux-saga": "^1.3.0",
-    "vite-plugin-svgr": "^4.2.0"
+    "redux-saga": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
@@ -39,6 +38,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
