--- a/package.json
+++ b/package.json
@@ -10,21 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.3",
     "@tanstack/react-query": "^5.44.0",
     "@tanstack/react-query-devtools": "^5.44.0",
-    "@types/react-lottie": "^1.2.10",
     "@types/react-svg": "^5.0.0",
     "lottie-react": "^2.4.0",
-    "lottie-web": "^5.12.2",
     "openai": "^4.38.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-lottie": "^1.2.4",
-    "react-markdown": "^9.0.1",
-    "react-redux": "^9.1.0",
-    "redux-saga": "^1.3.0"
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
