--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query-devtools": "^5.44.0",
     "@types/react-svg": "^5.0.0",
     "framer-motion": "^11.2.10",
+    "gh-pages": "^6.1.1",
     "lottie-react": "^2.4.0",
     "openai": "^4.38.3",
     "prop-types": "^15.8.1",
