--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
