--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.44.0",
     "@tanstack/react-query-devtools": "^5.44.0",
     "@types/react-svg": "^5.0.0",
@@ -24,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
+    "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0"
   },
   "devDependencies": {
