--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "types": ["vite/client", "vite-plugin-svgr/client"],
+    "types": ["vite/client", "vite-plugin-svgr/client", "cypress", "node"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -21,6 +21,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "src/types/svg.d.ts"],
+  "include": ["src", "src/types/svg.d.ts", "**/*.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
