refactor: Update example.env with new API URL for Make API

--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
 // Change the name of this file for ".env" and fill the values below with your confidential API keys
 
 VITE_API_KEY="YOUR OPEN WEATHER API KEY"
-VITE_OPEN_AI_KEY="YOUR OPEN AI API KEY"
+VITE_MAKE_API_URL="YOUR MAKE API URL"
